--- a/eventScheduler/src/app/app.component.html
+++ b/eventScheduler/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (choiceSelected)="onChoiceSwitch($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-events></app-events>
-      <app-skills-list></app-skills-list>
+      <app-events *ngIf="loadedChoice === 'events'"></app-events>
+      <app-skills-list *ngIf="loadedChoice !== 'events'"></app-skills-list>
     </div>
   </div>
 </div>
