--- a/eventScheduler/src/app/events/events-list/events-list.component.html
+++ b/eventScheduler/src/app/events/events-list/events-list.component.html
@@ -5,15 +5,6 @@
 </div>
 <div class="row">
     <div class="col">
-        <a href="#" class="list-group-item clearfix" *ngFor="let event of events">
-          <div class="pull-left">
-            <h4 class="list-group-item-heading">{{ event.title }}</h4>
-            <p class="list-group-item-text">{{ event.description }}</p>
-          </div>
-          <span class="pull-right">
-            <img [src]="event.imgPath" alt="{{ event.title }}" class="img-responsive" style="max-height: 50px;">
-          </span>
-        </a>
-        <app-events-item></app-events-item>
+        <app-events-item *ngFor="let event of events" [singleEvent]="event"></app-events-item>
     </div>
 </div>
