--- a/eventScheduler/src/app/events/events-detail/events-detail.component.html
+++ b/eventScheduler/src/app/events/events-detail/events-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img [src]="event.imgPath" alt="event.title" class="img-responsive" style="max-height: 200px;">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>Event Name</h1>
+        <h1>{{event.title}}</h1>
     </div>
 </div>
 <div class="row">
@@ -24,7 +24,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Description
+        {{event.description}}
     </div>
 </div>
 <div class="row">
