--- a/eventScheduler/src/app/events/events.component.html
+++ b/eventScheduler/src/app/events/events.component.html
@@ -1,8 +1,11 @@
 <div class="row">
     <div class="col-md-5">
-        <app-events-list></app-events-list>
+        <app-events-list (getSelectedEvent)="activeEvent = $event"></app-events-list>
     </div>
     <div class="col-md-7">
-        <app-events-detail></app-events-detail>
+        <app-events-detail *ngIf="activeEvent; else eventInfo" [event]="activeEvent"></app-events-detail>
+        <ng-template #eventInfo>
+            <h3>Select event!</h3>
+        </ng-template>
     </div>
 </div>
