--- a/eventScheduler/src/app/events/events-detail/events-detail.component.html
+++ b/eventScheduler/src/app/events/events-detail/events-detail.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
+        <div class="btn-group" appDrop>
             <button type="button" class="btn btn-primary dropdown-toggle">
                 Manage <span class="caret"></span>
             </button>
