--- a/eventScheduler/src/app/header/header.component.html
+++ b/eventScheduler/src/app/header/header.component.html
@@ -13,7 +13,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#" (click)="onSelected('skils')">Skills</a>
       </li>
-      <li class="nav-item dropdown navbar-right">
+      <li class="nav-item dropdown navbar-right dropdown" appDrop>
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Dropdown
