--- a/eventScheduler/src/app/skills-list/skills-edit/skills-edit.component.html
+++ b/eventScheduler/src/app/skills-list/skills-edit/skills-edit.component.html
@@ -1,23 +1,25 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <div>
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Skill</label>
-          <input type="text" id="name" class="form-control">
+          <input type="text" id="name" class="form-control"
+          #skillInput>
         </div>
         <div class="col-sm-3 form-group">
           <label for="level">Level</label>
-          <input type="text" id="level" class="form-control">
+          <input type="text" id="level" class="form-control"
+          #levelInput>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-success" type="submit" (click)="onAddSkill()">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
       </div>
-    </form>
+    </div>
   </div>
 </div>
