--- a/eventScheduler/src/app/app.component.html
+++ b/eventScheduler/src/app/app.component.html
@@ -2,8 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-events *ngIf="loadedChoice === 'events'"></app-events>
-      <app-skills-list *ngIf="loadedChoice !== 'events'"></app-skills-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
