--- a/eventScheduler/src/app/events/events-list/events-item/events-item.component.html
+++ b/eventScheduler/src/app/events/events-list/events-item/events-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item clearfix" (click)="onActiveEvent()" >
+<a style="cursor: pointer" class="list-group-item clearfix" (click)="onActiveEvent()" >
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ singleEvent.title }}</h4>
     <p class="list-group-item-text">{{ singleEvent.description }}</p>
