--- a/eventScheduler/src/app/skills-list/skills-edit/skills-edit.component.html
+++ b/eventScheduler/src/app/skills-list/skills-edit/skills-edit.component.html
@@ -1,25 +1,31 @@
 <div class="row">
   <div class="col-xs-12">
-    <div>
+    <form (ngSubmit)="onAddSkill(skillsForm)" #skillsForm="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Skill</label>
           <input type="text" id="name" class="form-control"
-          #skillInput>
+          name="skillName"
+          ngModel
+          required
+          />
         </div>
         <div class="col-sm-3 form-group">
           <label for="level">Level</label>
           <input type="text" id="level" class="form-control"
-          #levelInput>
+           name="level"
+           ngModel
+           required
+          />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onAddSkill()">Add</button>
+          <button class="btn btn-success" type="submit" [disabled]="!skillsForm.valid">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
       </div>
-    </div>
+    </form>
   </div>
 </div>
