--- a/eventScheduler/src/app/header/header.component.html
+++ b/eventScheduler/src/app/header/header.component.html
@@ -13,6 +13,10 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/skills">Skills</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" style="cursor: pointer;" (click)="onSaveEvents()">Save events</a>
+        <a class="nav-link" style="cursor: pointer;" (click)="onLoadEvents()">Load events</a>
+      </li>
       <li class="nav-item dropdown navbar-right dropdown" appDrop>
         <a class="nav-link dropdown-toggle" style="cursor: pointer" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
